--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Challenge for {{ month }}</title>
   </head>
   <body>
-    <h1>hola mundo</h1>
+    <h1>{{ month }}'s challenge</h1>
+    <h2>{{ challenge_text }}</h2>
   </body>
 </html>
